# chaising-the-mold

./: .gitignore  README.md
.github/workflows/: rust.yml
backend/: Cargo.toml
backend/src/: lib.rs  main.rs  service.rs
backend/src/sensing/: config.rs  factory.rs  mod.rs  sensor.rs  uart.rs
backend/src/service/: mod.rs  models.rs  routes.rs  state.rs
backend/src/storage/: circular_buffer.rs  mod.rs
docs/: components.uml
examples/read-temperature-and-humidity-with-nano/: read-temperature-and-humidity-with-nano.ino
frontend/: package-lock.json  package.json
frontend/public/: main.js
frontend/src/: App.css  App.js
frontend/src/components/: FetchPosts.js  TelemetryChart.js  TelemetryData.js  settingsContext.js
learning-journey/: README.md
learning-journey/backend/rocket/todos/: Cargo.toml
learning-journey/backend/rocket/todos/src/: lib.rs  main.rs  models.rs  routes.rs
learning-journey/backend/warp/todos/: Cargo.toml  manual_tests.sh
learning-journey/backend/warp/todos/src/: filters.rs  handlers.rs  lib.rs  main.rs  models.rs  state.rs
learning-journey/dht22_and_oled_example/: dht22_and_oled.ino
learning-journey/dht22_sensor_read_temp/: dht22_sensor_read_temp.ino
learning-journey/embedded/dht22_and_oled_with_adafruit/: dht22_and_oled_with_adafruit.ino
learning-journey/embedded/display-temperature-from-uart/: display-temperature-from-uart.ino
learning-journey/embedded/oled_i2c_screen_example/: oled_i2c_screen_example.ino
learning-journey/read_serial/: Cargo.toml
learning-journey/read_serial/src/: main.rs
prototyping/: README.md
prototyping/backend/: deploy.sh
prototyping/backend/axum/todos/: Cargo.toml
prototyping/backend/axum/todos/src/: lib.rs  main.rs  models.rs  routes.rs  state.rs
(+15 files in other folders)
