[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float-cmp = "0.9.0"
mockall = "0.11.3"
parameterized_test = "0.2.1"
pretty_env_logger = "0.4.0"
log = "0.4.14"
clap = "4.0.30"
tokio = { version = "1", features = ["full"] }
actix-web = "4.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"