[package]
name = "todos"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.30"
pretty_env_logger = "0.4.0"
log = "0.4.17"
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
