[package]
name = "todos"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
pretty_env_logger = "0.4.0"
log = "0.4.14"
tokio = { version = "1", features = ["full"] }
warp = "0.3.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"