[package]
name = "todos"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
clap = { version = "4.5.4", features = ["derive"] }
log = "0.4.21"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
